--- a/Estilos.css
+++ b/Estilos.css
@@ -1,7 +1,8 @@
 body{
-    font-family: century gothic;
+    font-family: 'century gothic';
+    background-image: url('Imagenes/Fondo.png');
 }
-section{
+main{
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
